kubernetes/remote-k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: web
    spec:
      containers:
        - name: nginx
          image: nginx:mainline
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: static-assets
        - name: web
          image: "ghcr.io/mlibrary/dromedary/dromedary_web:20221007.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources: { }
          volumeMounts:
            - mountPath: /opt/app-build
              name: data-prep
        - name: sidekiq
          image: ghcr.io/mlibrary/dromedary/dromedary_web:20221006.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          command:
            - bundle
            - exec
            - sidekiq
            - -r
            - ./app/jobs/job_index.rb
          volumeMounts:
            - mountPath: /opt/app-data
              name: middle-english-data
            - mountPath: /opt/app-build
              name: data-prep
      restartPolicy: Always
      volumes:
        - name: middle-english-data
          hostPath:
            path: /mnt/legacy_cifs_middle_english_prep
            type: Directory
        - name: data-prep
          persistentVolumeClaim:
            claimName: data-prep
        - name: static-assets
          emptyDir: { }
status: { }
