kubernetes/remote-k8s/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: sidekiq
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: sidekiq
    spec:
      containers:
        - name: sidekiq
          image: ghcr.io/mlibrary/dromedary/dromedary_web:20220711.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          command:
            - bundle
            - exec
            - sidekiq
            - -r
            - ./app/jobs/job_index.rb
          volumeMounts:
            - mountPath: /opt/app-data
              name: middle-english-prep
      volumes:
        - name: middle-english-prep
          hostPath:
            path: /mnt/legacy_cifs_middle_english_prep
            type: Directory
status: {}
