kubernetes/remote-k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: testing.arclight.kubernetes.lib.umich.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: web
              servicePort: 80
  tls:
    - hosts:
        - testing.arclight.kubernetes.lib.umich.edu
      secretName: search-tls
